navbar + button styling

--- a/index.html
+++ b/index.html
@@ -24,25 +24,26 @@
                 <div class="company-name">
                     Restaurant
                 </div>
-                <div>
-                    Home
+                <div class="navbar-link-group">
+                    <div class="navbar-link">
+                        Home
+                    </div>
+                    <div class="navbar-link">
+                        Our services
+                    </div>
+                    <div class="navbar-link">
+                        Pricing
+                    </div>
+                    <div class="navbar-link">
+                        Contact us
+                    </div>
                 </div>
-                <div>
-                    Our services
-                </div>
-                <div>
-                    Pricing
-                </div>
-                <div>
-                    Contact us
-                </div>
-                <div>
-                    <button>
+
+                <div class="navbar-button-group">
+                    <button class="signin-button">
                         Sign In
                     </button>
-                </div>
-                <div>
-                    <button>
+                    <button class="signup-button">
                         Sign Up
                     </button>
                 </div>
@@ -69,9 +70,11 @@
                     </p>
 
                     <div class="content-button-container">
+
                         <button class="content-button">
                             Find delivery buy
                         </button>
+
                     </div>
 
                 </article>
